Refactor HTML structure and update JavaScript fetch logic for Pokémon information retrieval

--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
         <option value="squirtle">Squirtle</option>
       </select>
       <button id="get-pokemon">Obtener Información</button>
+      
+    </div>
+    <div>
+       <ul id="pokemon-info"></ul>
     </div>
       </div>
   <script src="./js/script.js"></script>
 </body>
 </html>
+
+
+
