cambios css y js

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,15 +16,11 @@
         <option value="squirtle">Squirtle</option>
       </select>
       <button id="get-pokemon">Obtener Información</button>
-      
     </div>
     <div>
        <ul id="pokemon-info"></ul>
     </div>
-      </div>
+  </div>
   <script src="./js/script.js"></script>
 </body>
 </html>
-
-
-
