--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Información de Pokémon</h1>
     <div class="pokemon-form">
       <select id="pokemon-select">
+        <option value="selection">--Selecciona tu pokemon--</option>
         <option value="bulbasaur">Bulbasaur</option>
         <option value="charmander">Charmander</option>
         <option value="squirtle">Squirtle</option>
